# ai-agent-workshop

./: README.md
agent-with-hf-smolagents/: .env  README.md  main.py  requirements.txt
todo-agent-mcp/: .env  EmailManager.py  README.md  TodoManager.py  direct_ollama_call.py  main.py  mcp_client.py  mcp_server.py  prompt_templates.py  prompt_templates2.py  pyproject.toml
todo-agent-mcp/complete/: mcp_server.py
todo-agent-mcp/frontend/: package-lock.json
todo-agent-mcp/frontend/src/: App.css
todo-agent-mcp/frontend/src/components/: ChatInterface.js
todo-agent-smolagents/: .env  README.md  TodoAgent.py  main.py  requirements.txt
todo-agent-smolagents/frontend/: package.json
todo-agent-smolagents/frontend/public/: index.html
todo-agent-smolagents/frontend/src/: App.css  App.js
todo-agent-smolagents/frontend/src/components/: ChatInterface.js  MessageList.css  MessageList.js
web-search-keyword-smolagents/: AgentServer.py  README.md  main.py  requirements.txt
web-search-keyword-smolagents/frontend/: package-lock.json
web-search-keyword-smolagents/frontend/public/: index.html
web-search-keyword-smolagents/frontend/src/: App.js
web-search-keyword-smolagents/frontend/src/components/: ChatInterface.css  ChatInterface.js  MessageInput.css  MessageInput.js
